@@ -51,6 +51,7 @@ const string& Markup::emphasis(const string& s)
 const string& Markup::sanitize(const char* const c)
 { return sanitize(string(c)); }
 
+// FIXIT-L these escapes are emitted directly by asciidoc 8.6.9.
 const string& Markup::sanitize(const string& s)
 {
     const char* const asciidoc_chars = "~*<>^'";
